// Code generated by windranger, DO NOT EDIT.
syntax = "proto3";
package applicationNested;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wzyjerry/auth/internal/ent/schema/applicationNested";

// 应用
message Application {
    optional string id = 1; // 主键
    optional string name = 2; // 应用名称
    optional string homepage = 3; // 应用主页
    optional string description = 4; // 应用简介
    optional string callback = 5; // 授权回调地址
    optional string admin = 6; // 管理员ID
    optional string client_id = 7; // 应用ID
    repeated ClientSecret client_secrets = 8; // 应用密钥
}

// 应用密钥
message ClientSecret {
    optional string id = 1; // 密钥ID
    optional google.protobuf.Timestamp last_used = 2; // 最后使用时间
    optional string description = 3; // 说明
    optional string secret = 4; // 密钥
}
